--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.0.0-alpha",
+    "bootstrap-input-spinner": "^1.12.7",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
