--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "bootstrap-icons": "^1.0.0-alpha",
     "bootstrap-input-spinner": "^1.12.7",
     "cookie-parser": "~1.4.4",
