--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.7",
+    "bcryptjs": "^2.4.3",
     "bootstrap-icons": "^1.0.0-alpha",
     "bootstrap-input-spinner": "^1.12.7",
     "cookie-parser": "~1.4.4",
