--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "ejs": "^2.6.2",
     "express": "^4.16.4",
+    "express-session": "^1.17.0",
     "fs": "0.0.1-security",
     "http-errors": "^1.6.3",
     "method-override": "^3.0.0",
