--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.6.2",
     "express": "^4.16.4",
     "express-session": "^1.17.0",
+    "express-validator": "^6.3.1",
     "fs": "0.0.1-security",
     "http-errors": "^1.6.3",
     "method-override": "^3.0.0",
