--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "mysql2": "^2.1.0",
     "node-gyp": "^6.1.0",
     "nodemon": "^2.0.2",
     "path": "^0.12.7"
