--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "npx nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^3.0.7",
