--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bcrypt": "^3.0.7",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "bootstrap-icons": "^1.0.0-alpha",
     "bootstrap-input-spinner": "^1.12.7",
     "cookie-parser": "~1.4.4",
