--- a/app/package.json
+++ b/app/package.json
@@ -12,12 +12,14 @@
     "body-parser": "^1.19.0",
     "bootstrap-icons": "^1.0.0-alpha",
     "bootstrap-input-spinner": "^1.12.7",
+    "chart.js": "^2.9.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^2.6.2",
     "express": "^4.16.4",
     "express-session": "^1.17.0",
     "express-validator": "^6.3.1",
+    "formik": "^2.1.4",
     "fs": "0.0.1-security",
     "http-errors": "^1.6.3",
     "method-override": "^3.0.0",
@@ -27,7 +29,11 @@
     "node-gyp": "^6.1.0",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
+    "react-bootstrap": "^1.0.0",
+    "react-chartjs-2": "^2.9.0",
+    "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.4",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "yup": "^0.28.3"
   }
 }
