Agrego control de grafico

--- a/app/dashboard/package.json
+++ b/app/dashboard/package.json
@@ -11,6 +11,7 @@
     "canvasjs": "^1.8.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-bootstrap-range-slider": "^0.3.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
